<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registros"
    android:background="@color/guindo1">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvtituloRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_registro"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="register.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/bg_white">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresardatos"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="17sp"/>
<!--            nombre-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <EditText
                    android:id="@+id/etCajaNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_nombre"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
<!--            Apellido-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <EditText
                    android:id="@+id/etCajaApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_apellido"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/correo"
                android:textSize="16dp"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <EditText
                    android:id="@+id/CajaCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_correo"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contraseña"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/CajaConstraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_contraseña"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/btnRegistrar"
            android:backgroundTint="@color/yellow2"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvIrLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/ir_al_login"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />











    </androidx.appcompat.widget.LinearLayoutCompat>








</ScrollView>